src/test/deca/context/invalid/created/println.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 6: Error: Expected expression type is int, float or string, got boolean

{
    println(true);
}